# geneLengthuman

./: Cargo.toml  README.md  genelength.txt
src/: args.rs  main.rs  threadedhuman.rs  threadedmouse.rs
