[package]
name = "geneLengthuman"
version = "0.1.0"
edition = "2024"
readme = "README.md"
license = "MIT"
authors = ["Gaurav Sablok <gsablok@ibch.poznan.pl>"]
description = "length grep for gene expression"
homepage = "https://github.com/IBCHgenomic/lengthgrep"
repository = "https://github.com/IBCHgenomic/lengthgrep"

[dependencies]
async-std = "1.13.1"
clap = { version = "4.5.41", features = ["derive"] }
